// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cleanup falls back to greedy method 1`] = `
Array [
  ".gitattributes",
  ".github/workflows/pull-request-lint.yml",
  ".github/workflows/stale.yml",
  ".gitignore",
  ".projen/deps.json",
  ".projen/files.json",
  ".projen/tasks.json",
  "delete.txt",
]
`;

exports[`cleanup uses cache file 1`] = `
Array [
  ".gitattributes",
  ".github/workflows/pull-request-lint.yml",
  ".github/workflows/stale.yml",
  ".gitignore",
  ".projen/deps.json",
  ".projen/files.json",
  ".projen/tasks.json",
  "foo/bar.txt",
]
`;
